--- a/assets/css/cmps/app-header.css
+++ b/assets/css/cmps/app-header.css
@@ -1,5 +1,5 @@
 header {
-    background: lightcyan;
+    background:lightgray;
     border-bottom: 2px solid white;
 }
 
@@ -10,15 +10,35 @@ header {
 }
 
 nav a {
-    margin: .5em;
+    margin: 1em;
+    font-size: 1.5em;
 }
 
-nav a:active {
-    color: purple;
+nav a:hover {
+    animation: pop 0.5s ease-in;
 }
 
 nav a.active {
-    color: darkblue;
+    color: rgb(94, 94, 116);
     font-weight: bold;
-    text-decoration: overline;
+    text-decoration:solid;
 }
+
+.header-logo{
+    height: 3.5em;
+    margin-top:7px
+  
+}
+
+@keyframes pop {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.3);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  
