--- a/assets/css/basics/helpers.css
+++ b/assets/css/basics/helpers.css
@@ -1,23 +1,29 @@
 .flex {
-    display: flex;
+  display: flex;
 }
 
 .column {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .justify-center {
-    justify-content: center;
+  justify-content: center;
 }
 
 .align-center {
-    align-items: center;
+  align-items: center;
 }
 
 .space-between {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 
 .grid {
-    display: grid;
+  display: grid;
+}
+
+.clean-list {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
 }
