--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,8 +17,6 @@
 /* @import './apps/mail/views/mail-index.css'; */
 
 /* Cmps */
-
 @import './cmps/user-msg.css';
 @import './cmps/app-header.css';
-
-/* @import './apps/mail/cmps/mail-list.css'; */
+@import './apps/note/cmps/note-create.css'; /* @import './apps/mail/cmps/mail-list.css'; */
