--- a/assets/css/cmps/app-header.css
+++ b/assets/css/cmps/app-header.css
@@ -7,6 +7,7 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 20px 0;
+    color:rgb(90, 87, 87)
 }
 
 nav a {
@@ -19,9 +20,9 @@ nav a:hover {
 }
 
 nav a.active {
-    color: rgb(94, 94, 116);
-    font-weight: bold;
-    text-decoration:solid;
+    color: black;
+    font-weight: bold;    
+    scale: 1.3;
 }
 
 .header-logo{
