--- a/assets/css/cmps/user-msg.css
+++ b/assets/css/cmps/user-msg.css
@@ -1,21 +1,29 @@
 .user-msg {
-    background-color: lightgray;
-    padding: 1em;
-    position: absolute;
-    top: 1em;
-    right: 1em;
+  background-color: lightgray;
+  padding: 1em;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 20rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .user-msg.success {
-    background-color: lightgreen;
+  background-color: #323232;
+  color: #fff;
 }
 
 .user-msg.error {
-    background-color: lightpink;
+  background-color: lightpink;
 }
 
-
-.user-msg button{
-    float: right;
-    margin: 1em;
+.user-msg button {
+  float: right;
+  margin: 1em;
+  height: 1.5rem;
+  width: 1.5rem;
+  border: none;
+  pointer-events: none;
 }
