--- a/assets/css/apps/note/cmps/note-preview.css
+++ b/assets/css/apps/note/cmps/note-preview.css
@@ -29,3 +29,53 @@
   background-color: black;
   color: whitesmoke;
 }
+
+.img-3dots {
+  opacity: 0;
+  height: 15px;
+  width: 25px;
+}
+
+.note:hover .img-3dots {
+  cursor: pointer;
+  transition: 0.7s;
+  opacity: 1;
+}
+
+.dropdown-menu {
+  position: absolute;
+  top: 6.25rem;
+  right: 3.75rem;
+  background-color: #fff;
+  padding: 0.625rem 1.25rem;
+  width: 9.375rem;
+  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302),
+    0 2px 6px 2px rgba(60, 64, 67, 0.149);
+}
+
+.dropdown-menu ul li {
+  padding: 0.3125rem 1.0625rem 0.3125rem 0.625rem;
+  line-height: 1.25rem;
+  font-weight: 400;
+  font-size: 0.875rem;
+  border: 1px solid transparent;
+}
+
+.dropdown-menu ul li:hover {
+  background-color: #503d3d35;
+  cursor: pointer;
+}
+
+.dropdown-menu.active {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+  transition: 0.5ms ease;
+}
+
+.dropdown-menu.inactive {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-1.25rem);
+  transition: 0.8ms ease;
+}
