--- a/assets/css/apps/mail/cmps/mail-list.css
+++ b/assets/css/apps/mail/cmps/mail-list.css
@@ -12,4 +12,7 @@
   font-size: 12px;
   font-family: Arial, Helvetica, sans-serif;  
 }
+.fl-table tr:hover{
+  background-color: rgba(128, 128, 128, 0.317);
+}
 
