--- a/assets/css/apps/mail/cmps/mail-list.css
+++ b/assets/css/apps/mail/cmps/mail-list.css
@@ -1,18 +1,33 @@
- /* mail list */
+/* mail list */
 
- .fl-table {
-    flex: 1;
+.fl-table {
+  flex: 1;
+  padding: 8px;
+  border-collapse: collapse;
 }
 
-.fl-table td, .fl-table th {
+.fl-table td,
+.fl-table th {
   padding: 8px;
+  border-bottom: 1px solid lightgray;
+  border-top: 1px solid lightgray;
 }
 
 .fl-table td {
   font-size: 12px;
-  font-family: Arial, Helvetica, sans-serif;  
+  font-family: Arial, Helvetica, sans-serif;
 }
-.fl-table tr:hover{
-  background-color: rgba(128, 128, 128, 0.317);
+.fl-table tr:hover {
+  background-color: rgba(169, 215, 217, 0.752);
+  cursor: pointer;
 }
 
+footer {
+  padding: 35px;
+  text-align: center;
+  grid-area: 3 / 1 / 4 / 3;
+}
+
+.img-starred {
+  height: 15px;
+}
