--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,6 +19,7 @@
 @import './cmps/app-header.css';
 @import './apps/note/cmps/note-create.css';
 @import './apps/note/cmps/note-list.css';
+@import './apps/note/cmps/note-filter.css';
 
 @import './apps/mail/cmps/mail-list.css';
 @import './apps/mail/cmps/mail-main-nav.css';
