--- a/assets/css/apps/mail/cmps/new-emil.css
+++ b/assets/css/apps/mail/cmps/new-emil.css
@@ -1,6 +1,7 @@
 form.new-email {
   position: fixed;
   right: 0;
+  font-family: Arial, Helvetica, sans-serif;
   bottom: 0;
   min-width: 461px;
   min-height: 500px;
@@ -14,8 +15,12 @@ form.new-email {
   margin: 30px;
   padding: 20px;
   cursor: pointer;
-  background-color: gray;
+  background-color: #c2e7ff;
   border-radius: 20px;
+  border: none;
+}
+.compose-btn:hover {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
 .submit {
@@ -31,7 +36,7 @@ textarea {
 }
 .mail-compose-to {
   padding: 10px;
-  border-bottom: 1px solid var(--border-line-color);
+  border-bottom: 1px solid lightcyan;
 }
 .new-email {
   background-color: #f8f8f8;
@@ -80,5 +85,60 @@ textarea {
 .close-modal-btn {
   border: none;
   cursor: pointer;
+  background-color: lightgray;
   padding: 0px 0px 30px;
+  /* border-bottom: 1px black; */
+}
+
+/* Email preview */
+.email-preview-container {
+  font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
+  /* height: 100%; */
+  border: 1px solid #ccc;
+}
+
+.email-preview-header {
+  height: 50px;
+  background-color: #f1f1f1;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 16px;
+}
+
+.back-to-btn {
+  background-color: #dcdcdc;
+  padding: 5px 10px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.email-preview-body {
+  height: 65vh;
+}
+
+.email-preview-footer {
+  background-color: #f1f1f1;
+  padding: 10px;
+  border-top: 1px solid #ccc;
+}
+.email-preview-body {
+  padding: 16px;
+  border-bottom: 1px solid #ddd;
+}
+
+.email-preview-body > div {
+  margin-bottom: 8px;
+}
+
+.email-preview-body > div:last-child {
+  margin-bottom: 0;
+}
+.delete-btn-modal {
+  background-color: #dc3545;
+  padding: 5px 10px;
+  border-radius: 3px;
+  color: #fff;
 }
