--- a/assets/css/views/home.css
+++ b/assets/css/views/home.css
@@ -1,1 +1,30 @@
- /* home */
+/* home */
+
+.home {
+  background-image: url(../../img/home-background-img.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+  height: 90vh;
+}
+
+h1.homepage-header,
+.homepage-p {
+  padding: 2.5em;
+  font-size: 2.5rem;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgba(255, 255, 255, 0.744);
+}
+
+.footer {
+  background-color: #3c3c3c;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
+  height: 40px;
+  text-align: center;
+  line-height: 10px;
+  color: rgba(255, 255, 255, 0.744);
+  position: fixed;
+  bottom: 0;
+}
